--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
 </head>
 <body>
 
-  <div id="div-container">
+  <div id="title-container">
+    <div id="title">
+      <h1>Etch-a-Sketch</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nulla facilisi morbi tempus iaculis urna. Euismod lacinia at quis risus sed vulputate odio ut enim. Placerat orci nulla pellentesque dignissim enim.</p>
+    </div>
+  </div>
 
-
+  <div id="main-section">
+    <div id="div-container"></div>
+  
+    <div>
+      <button id="btn">New Canvas</button>
+    </div>
   </div>
   
 </body>
