Fix layout of button and heading, add minor styles to button and heading container

--- a/index.html
+++ b/index.html
@@ -8,20 +8,18 @@
   <title>Etch-a-Sketch</title>
 </head>
 <body>
-
   <div id="title-container">
+    <div id="button-container">
+      <button id="btn">New Canvas</button>
+    </div>
     <div id="title">
       <h1>Etch-a-Sketch</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nulla facilisi morbi tempus iaculis urna. Euismod lacinia at quis risus sed vulputate odio ut enim. Placerat orci nulla pellentesque dignissim enim.</p>
+      <p>Click on New Canvas, then click one time inside the new canvas to start drawing!</p>
     </div>
   </div>
 
   <div id="main-section">
     <div id="div-container"></div>
-  
-    <div>
-      <button id="btn">New Canvas</button>
-    </div>
   </div>
   
 </body>
